商品类目管理优化

--- a/WebContent/style/css/pss.css
+++ b/WebContent/style/css/pss.css
@@ -1,5 +1,5 @@
-@import url("comm/reset.css");
+@import url("reset.css");
 
-@import url("comm/ui.css");
+@import url("ui.css");
 
-@import url("pss/web.css");
+@import url("web.css");
