--- a/WebContent/style/css/web.css
+++ b/WebContent/style/css/web.css
@@ -3,7 +3,7 @@
 html,body {
 	font: 14px "Microsoft Yahei", sans-serif;
 	background-color: #eee;
-	background-image: url("../../image/body_bg.png");
+	background-image: url("../image/body_bg.png");
 	overflow: auto;
 	overflow-x: hidden;
 }
@@ -125,10 +125,9 @@ input:focus,textarea:focus,img:focus,select:focus {
 	line-height: 30px;
 	font-weight: bold;
 	background: #ECF0F1;
-	background: -moz-linear-gradient(top, #BDC3C7 0%, #ECF0F1 100%);
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #BDC3C7), color-stop(100%, #ECF0F1));
-	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#BDC3C7', endColorstr='#ECF0F1', GradientType=0);
-	//background: url("../../image/menu-title-bg.gif") top left no-repeat;
+	background: -moz-linear-gradient(top, #ECF0F1 0%, #BDC3C7 100%);
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #ECF0F1), color-stop(100%, #BDC3C7));
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ECF0F1', endColorstr='#BDC3C7', GradientType=0);
 }
 
 #menuList .open {
@@ -144,16 +143,16 @@ input:focus,textarea:focus,img:focus,select:focus {
 	width: 100%;
 	height: 26px;
 	line-height: 26px;
-	background: #95A5A6;
-	//background: url("../../image/menu-item-bg.gif") top left no-repeat;
+	background: #f3f3f3;
 }
 
 .menu-item span:hover {
-	//background: url("../../image/menu-item-hover-bg.gif") top left no-repeat;
+	background: #fff;
 }
 
 .menu-item span.active {
 	color: #2475b9;
+	background: #dcdcdc;
 }
 
 .menu-item span.active:hover {
@@ -164,8 +163,7 @@ input:focus,textarea:focus,img:focus,select:focus {
 .top-line {
 	display: none;
 	height: 5px;
-	background: #27AE60;
-	//background: url("../../image/menu-topline.gif") top left no-repeat
+	background: #808080;
 }
 
 .frame_class {
@@ -243,11 +241,11 @@ input:focus,textarea:focus,img:focus,select:focus {
 
 .todo dl .todo-done .todo-icon {
 	width: 60px;
-	background: url("../../image/todo-2x.png") 10px 5px no-repeat;
+	background: url("../image/todo-2x.png") 10px 5px no-repeat;
 }
 
 .todo dl .todo-done .todo-icon-active {
-	background: url("../../image/done-2x.png") 10px 5px no-repeat;
+	background: url("../image/done-2x.png") 10px 5px no-repeat;
 }
 
 .todo dl .todo-done .todo-content {
@@ -315,11 +313,11 @@ input:focus,textarea:focus,img:focus,select:focus {
 .holder .list dl .list-item .item-icon {
 	width: 30px;
 	height: 30px;
-	background: url("../../image/icon-off.png") no-repeat;
+	background: url("../image/icon-off.png") no-repeat;
 }
 
 .holder .list dl .list-item .item-icon-active {
-	background: url("../../image/icon-on.png") no-repeat;
+	background: url("../image/icon-on.png") no-repeat;
 }
 
 .holder .list dl .list-item .item-value {
