--- a/WebContent/style/css/sort.css
+++ b/WebContent/style/css/sort.css
@@ -1,9 +1,5 @@
 @CHARSET "UTF-8";
 
-body {
-	font-size: 12px;
-}
-
 ol li,ul li {
 	list-style: none;
 }
@@ -16,6 +12,7 @@ ol li,ul li {
 .cate-container {
 	width: 950px;
 	overflow: hidden;
+	font-size: 12px;
 	position: relative;
 	border: 1px solid #d5e4fa;
 	background-color: #F5F9FF
@@ -453,7 +450,6 @@ li.cc-hasChild-item {
 
 .bottom-panel,.search-panel {
 	width: 950px;
-	font-size: 14px;
 }
 
 .search-source {
@@ -468,11 +464,41 @@ li.cc-hasChild-item {
 	*display: inline;
 	*zoom: 1;
 	z-index: 10;
-	width: 20px;
-	height: 20px;
+	width: 16px;
+	height: 16px;
+	margin: 2px 0;
 	background: url("../image/lab-settings.png") no-repeat;
 }
 
 .lab:hover {
 	background: url("../image/lab-settings-hover.png") no-repeat;
+}
+
+.operation-box {
+	height: 50px;
+	text-align: center;
+}
+
+.operation-btn {
+	background: #f3f3f3;
+	font-weight: bold;
+	border: 1px solid #dcdcdc;
+	height: 30px;
+	width: 50px;
+	margin: 10px;
+}
+
+.operation-add:hover {
+	color: #f3f3f3;
+	background: #27AE60;
+}
+
+.operation-edit:hover {
+	color: #f3f3f3;
+	background: #E67E22;
+}
+
+.operation-delete:hover {
+	color: #f3f3f3;
+	background: #E74C3C;
 }
