--- a/WebContent/style/css/web.css
+++ b/WebContent/style/css/web.css
@@ -12,7 +12,7 @@ html {
 	height: 100%;
 }
 
-input,textarea,img,select {
+input,textarea,img,select,button {
 	border: 2px solid #ccc;
 	font-size: 14px;
 	font-family: "微软雅黑";
@@ -41,6 +41,7 @@ input:focus,textarea:focus,img:focus,select:focus {
 	z-index: 1000;
 	width: 100%;
 	height: 100%;
+	_height: expression(document.body.offsetHeight + 'px');
 	float: none;
 	display: none;
 	background-color: #000;
@@ -103,7 +104,7 @@ input:focus,textarea:focus,img:focus,select:focus {
 	right: 0;
 	bottom: 0;
 	height: auto;
-	_height: expression(document.body.offsetHeight -   66 +   'px');
+	_height: expression(document.body.offsetHeight - 66 + 'px');
 }
 
 #menuList {
