--- a/WebContent/style/css/ui.css
+++ b/WebContent/style/css/ui.css
@@ -45,8 +45,20 @@
 	width: 100px;
 }
 
+.text-110 {
+	width: 110px;
+}
+
 .text-120 {
 	width: 120px;
+}
+
+.text-130 {
+	width: 130px;
+}
+
+.text-140 {
+	width: 140px;
 }
 
 .text-150 {
@@ -338,7 +350,6 @@
 }
 
 .form-source-value {
-	width: 70%;
 	text-align: left;
 }
 
