--- a/src/main/webapp/style/css/web.css
+++ b/src/main/webapp/style/css/web.css
@@ -59,271 +59,88 @@ input:focus,textarea:focus,img:focus,select:focus {
 	display: none;
 }
 
-#head {
-	width: 100%;
-	height: 65px;
-	overflow: hidden;
+ul {
+	list-style: none;
 }
-
-#panel {
-	height: 63px;
-	color: #eee;
-	text-shadow: 0px 1px 1px #555;
-	background: #34495E;
-	background: -moz-linear-gradient(top, #34495E 0%, #2C3E50 100%);
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #34495E), color-stop(100%, #2C3E50));
-	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#34495E', endColorstr='#2C3E50', GradientType=0);
-	border: 1px solid #34495E;
+a {
+	color: #000;
+	text-decoration: none;
 }
-
-#panel #user {
-	height: 50px;
-	float: right;
-	margin: 5px;
+#header {
+	height: 44px;
+	border-top: 1px solid #808080;
+	border-bottom: 1px solid #808080;
 }
-
-#menu-navi {
-	height: 30px;
-	line-height: 30px;
-	margin: 0 0 20px 182px;
-	border-bottom: 5px solid #808080;
+#header-inner {
+	height: 44px;
+	background: #105494;
 }
-
-#navi-title {
-	padding-left: 15px;
+ul.nav {
+	height: 44px;
+}
+#nav li.top-nav {
+	float: left;
+	height: 44px;
+}
+#nav a.top-menu {
+	display: block;
+	color: #fff;
+	font-size: 16px;
 	font-weight: bold;
+	width: 70px;
+	height: 16px;
+	line-height: 16px;
+	text-align: center;
+	padding: 14px 25px;
 }
-
-/* MENU */
-#menu {
-	width: 182px;
-	background: #BDC3C7;
+#nav a.top-menu.active {
+	background: #06407d;
+}
+div.megamenu {
+	top: -9999px;
+	border: 1px solid #dcdcdc;
+	border-top: 2px solid #3a98b0;
 	position: absolute;
-	top: 65px;
+	z-index: 1000;
+	background: #fff;
+	padding: 10px 20px 15px 10px;
+}
+h4.menu-heading {
+	font-weight: bold;
+	font-size: 14px;
+}
+div.nav-child {
+	float: left;
+	margin: 10px 20px 0 10px;
+}
+ul.nav-list {
+	margin-bottom: 5px;
+	padding-bottom: 5px;
+	border-bottom: 1px solid #dcdcdc;
+}
+ul.nav-list.last {
+	border-bottom: 0;
+}
+ul.nav-list a {
+	color: #808080;
+}
+ul.nav-list a:hover {
+	color: #FF7F00;
+}
+#main {
+	position: absolute;
+	top: 115px;
 	left: 0;
 	right: 0;
 	bottom: 0;
 	height: auto;
-	_height: expression(document.body.offsetHeight - 66 + 'px');
-}
-
-#menuList {
-	cursor: pointer;
-	text-align: center;
-}
-
-#menu-head {
-	height: 35px;
-	background: #ddd;
-	text-shadow: 0px 1px 1px #000;
-	background: -moz-linear-gradient(top, #eeeeee 0%, #dddddd 100%);
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #eeeeee), color-stop(100%, #dddddd));
-	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#eeeeee', endColorstr='#dddddd', GradientType=0);
-}
-
-#menuList .menu-title {
-	height: 30px;
-	line-height: 30px;
-	font-weight: bold;
-	background: #ECF0F1;
-	background: -moz-linear-gradient(top, #ECF0F1 0%, #BDC3C7 100%);
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #ECF0F1), color-stop(100%, #BDC3C7));
-	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ECF0F1', endColorstr='#BDC3C7', GradientType=0);
-}
-
-#menuList .open {
-	
-}
-
-#menuList .menu-item {
-	display: none;
-}
-
-.menu-item span {
-	display: block;
-	width: 100%;
-	height: 26px;
-	line-height: 26px;
-	background: #f3f3f3;
-}
-
-.menu-item span:hover {
-	background: #fff;
-}
-
-.menu-item span.active {
-	color: #2475b9;
-	background: #dcdcdc;
-}
-
-.menu-item span.active:hover {
-	color: #2475b9;
-	cursor: text;
-}
-
-.top-line {
-	display: none;
-	height: 5px;
-	background: #808080;
-}
-
-.frame_class {
-	padding: 0;
-	margin: 0;
-	width: 100%;
-	height: 100%;
 	overflow: hidden;
+	_height: expression(document.body.offsetHeight - 115 + 'px');
 }
-
-#mainFrameContainer {
-	position: absolute;
-	top: 110px;
-	left: 192px;
-	bottom: 0;
-	right: 0;
-	overflow: hidden;
-	z-index: 4;
-}
-
 #mainFrame {
-	position: absolute;
-	_position: relative;
 	width: 100%;
-	_width: expression(document.body.offsetWidth -   192 +   'px');
+	padding: 1%;
 	height: 100%;
-	*height: expression(document.body.offsetHeight -   110 +   'px');
-	z-index: 5;
-}
-
-/* CONTENT COMM */
-.holder .todo {
-	width: 300px;
-	float: left;
-	margin: 0 20px;
-	text-shadow: 0px 1px 1px #000;
-}
-
-.todo-head {
-	height: 50px;
-	background: #7d8f33;
-	background: -moz-linear-gradient(top, #1ABC9C 0%, #16A085 100%);
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #1ABC9C), color-stop(100%, #16A085));
-	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#1ABC9C', endColorstr='#16A085', GradientType=0);
-}
-
-.todo-head input {
-	background: #1ABC9C;
-	width: 220px;
-	height: 26px;
-	line-height: 26px;
-	padding: 5px;
-	margin: 5px;
-}
-
-.todo dl {
-	width: 300px;
-}
-
-.todo dl .todo-done {
-	color: #fff;
-	width: 300px;
-	height: 50px;
-	line-height: 50px;
-	background: #34495E;
-	border-top: 2px solid #2C3E50;
-}
-
-.todo dl .todo-done div {
-	float: left;
-	height: 50px;
-	line-height: 50px;
-	cursor: pointer;
-}
-
-.todo dl .todo-done .todo-icon {
-	width: 60px;
-	background: url("../image/todo-2x.png") 10px 5px no-repeat;
-}
-
-.todo dl .todo-done .todo-icon-active {
-	background: url("../image/done-2x.png") 10px 5px no-repeat;
-}
-
-.todo dl .todo-done .todo-content {
-	width: 240px;
-	font-size: 14px;
-}
-
-.todo dl .todo-done .todo-content div {
-	width: 220px;
-	height: 25px;
-	line-height: 25px;
-	padding-left: 20px;
-}
-
-.todo dl .todo-done .todo-content .todo-name {
-	font-weight: bold;
-}
-
-.todo dl .todo-done .todo-content .todo-remark {
-	font-size: 12px;
-}
-
-.holder .list {
-	width: 300px;
-	float: left;
-	color: #fff;
-	margin: 0 20px;
-}
-
-.holder .list .list-head {
-	width: 300px;
-	height: 40px;
-	background: #1ABC9C;
-}
-
-.holder .list .list-head input {
-	width: 250px;
-	height: 24px;
-	line-height: 24px;
-	margin: 5px;
-}
-
-.holder .list dl {
-	width: 300px;
-}
-
-.holder .list dl .list-item {
-	width: 300px;
-	height: 30px;
-	line-height: 30px;
-	background: #34495E;
-	border-top: 2px solid #2C3E50;
-	cursor: pointer;
-}
-
-.holder .list dl .list-item:hover {
-	color: #1ABC9C;
-	background: #2C3E50;
-}
-
-.holder .list dl .list-item div {
-	float: left;
-}
-
-.holder .list dl .list-item .item-icon {
-	width: 30px;
-	height: 30px;
-	background: url("../image/icon-off.png") no-repeat;
-}
-
-.holder .list dl .list-item .item-icon-active {
-	background: url("../image/icon-on.png") no-repeat;
-}
-
-.holder .list dl .list-item .item-value {
-	width: 200px;
-	height: 30px;
-	line-height: 30px;
-	padding: 0 35px;
+	overflow: scroll;
+	_height: expression(document.body.offsetHeight - 115 + 'px');
 }
