--- a/src/main/webapp/style/css/web.css
+++ b/src/main/webapp/style/css/web.css
@@ -4,7 +4,7 @@ html,body {
 	font: 14px "Microsoft Yahei", sans-serif;
 	background-color: #eee;
 	background-image: url("../image/body_bg.png");
-	overflow: auto;
+	overflow-y: auto;
 	overflow-x: hidden;
 }
 
@@ -22,6 +22,13 @@ input:focus,textarea:focus,img:focus,select:focus {
 	border-color: #1abc9c;
 }
 
+ul {
+	list-style: none;
+}
+
+a {
+	text-decoration: none;
+}
 .clear {
 	display: block;
 	width: 0;
@@ -44,7 +51,7 @@ input:focus,textarea:focus,img:focus,select:focus {
 	_height: expression(document.body.offsetHeight + 'px');
 	float: none;
 	display: none;
-	background-color: #000;
+	background-color: #808080;
 	position: absolute;
 	filter: alpha(opacity =   50);
 	-moz-opacity: 0.5;
@@ -59,29 +66,36 @@ input:focus,textarea:focus,img:focus,select:focus {
 	display: none;
 }
 
-ul {
-	list-style: none;
+#header {
+	width: 100%;
+	height: 65px;
+	overflow: hidden;
 }
-a {
-	color: #000;
-	text-decoration: none;
-}
+
 #header {
 	height: 44px;
 	border-top: 1px solid #808080;
 	border-bottom: 1px solid #808080;
+	background: #34495E;
+	background: -moz-linear-gradient(top, #34495E 0%, #2C3E50 100%);
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #34495E), color-stop(100%, #2C3E50));
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#34495E', endColorstr='#2C3E50', GradientType=0);
 }
+
 #header-inner {
+	float: left;
 	height: 44px;
-	background: #105494;
 }
+
 ul.nav {
 	height: 44px;
 }
+
 #nav li.top-nav {
 	float: left;
 	height: 44px;
 }
+
 #nav a.top-menu {
 	display: block;
 	color: #fff;
@@ -92,10 +106,14 @@ ul.nav {
 	line-height: 16px;
 	text-align: center;
 	padding: 14px 25px;
+	text-shadow: 0px 1px 1px #555;
 }
+
 #nav a.top-menu.active {
-	background: #06407d;
+	color: #E0FFFF;
+	background: #2C3E50;
 }
+
 div.megamenu {
 	top: -9999px;
 	border: 1px solid #dcdcdc;
@@ -105,42 +123,95 @@ div.megamenu {
 	background: #fff;
 	padding: 10px 20px 15px 10px;
 }
+
 h4.menu-heading {
 	font-weight: bold;
 	font-size: 14px;
 }
+
 div.nav-child {
 	float: left;
 	margin: 10px 20px 0 10px;
 }
+
 ul.nav-list {
 	margin-bottom: 5px;
 	padding-bottom: 5px;
 	border-bottom: 1px solid #dcdcdc;
 }
+
 ul.nav-list.last {
 	border-bottom: 0;
 }
+
 ul.nav-list a {
 	color: #808080;
 }
+
 ul.nav-list a:hover {
 	color: #FF7F00;
 }
-#main {
-	position: absolute;
-	top: 115px;
-	left: 0;
-	right: 0;
-	bottom: 0;
-	height: auto;
-	overflow: hidden;
-	_height: expression(document.body.offsetHeight - 115 + 'px');
+
+#panel {
+	float: right;
+	height: 44px;
+	padding: 0 20px;
+	color: #eee;
+	font-size: 12px;
 }
-#mainFrame {
+
+#user {
+	height: 40px;
+	margin: 2px;
+}
+
+#user div {
+	height: 14px;
+	line-height: 14px;
+	padding: 3px 0;
+}
+
+#logout {
+	color: #e60000;
+	text-decoration: underline;
+}
+
+#menu-navi {
+	height: 30px;
+	line-height: 30px;
+	margin: 0 0 20px 0;
+	border-bottom: 5px solid #808080;
+}
+
+#navi-title {
+	padding-left: 15px;
+	font-weight: bold;
+}
+
+.frame_class {
+	padding: 0;
+	margin: 0;
 	width: 100%;
-	padding: 1%;
 	height: 100%;
-	overflow: scroll;
-	_height: expression(document.body.offsetHeight - 115 + 'px');
+	overflow: hidden;
+}
+
+#mainFrameContainer {
+	position: absolute;
+	top: 110px;
+	left: 15px;
+	bottom: 0;
+	right: 0;
+	overflow: hidden;
+	z-index: 4;
+}
+
+#mainFrame {
+	position: absolute;
+	_position: relative;
+	width: 100%;
+	_width: expression(document.body.offsetWidth -   15 +   'px');
+	height: 100%;
+	*height: expression(document.body.offsetHeight -   110 +   'px');
+	z-index: 5;
 }
