--- a/src/main/webapp/style/css/ui.css
+++ b/src/main/webapp/style/css/ui.css
@@ -1,152 +1,174 @@
 @CHARSET "UTF-8";
 
 /* COMM */
-.text-10 {
+input:focus,textarea:focus,img:focus,select:focus {
+	border-color: #1abc9c;
+}
+
+.w-10 {
 	width: 10px;
 }
 
-.text-15 {
+.w-15 {
 	width: 15px;
 }
 
-.text-20 {
+.w-20 {
 	width: 20px;
 }
 
-.text-30 {
+.w-30 {
 	width: 30px;
 }
 
-.text-40 {
+.w-40 {
 	width: 40px;
 }
 
-.text-50 {
+.w-50 {
 	width: 50px;
 }
 
-.text-60 {
+.w-60 {
 	width: 60px;
 }
 
-.text-70 {
+.w-70 {
 	width: 70px;
 }
 
-.text-80 {
+.w-80 {
 	width: 80px;
 }
 
-.text-90 {
+.w-90 {
 	width: 90px;
 }
 
-.text-100 {
+.w-100 {
+	width: 90px;
+	padding: 0 5px;
+}
+
+.w-110 {
 	width: 100px;
+	padding: 0 5px;
 }
 
-.text-110 {
+.w-120 {
 	width: 110px;
+	padding: 0 5px;
 }
 
-.text-120 {
+.w-130 {
 	width: 120px;
+	padding: 0 5px;
 }
 
-.text-130 {
+.w-140 {
 	width: 130px;
+	padding: 0 5px;
 }
 
-.text-140 {
+.w-150 {
 	width: 140px;
+	padding: 0 5px;
 }
 
-.text-150 {
-	width: 150px;
+.w-200 {
+	width: 190px;
+	padding: 0 5px;
 }
 
-.text-200 {
-	width: 200px;
+.w-250 {
+	width: 240px;
+	padding: 0 5px;
 }
 
-.text-300 {
-	width: 300px;
+.w-300 {
+	width: 290px;
+	padding: 0 5px;
 }
 
-.text-400 {
-	width: 400px;
+.w-400 {
+	width: 390px;
+	padding: 0 5px;
 }
 
-.text-500 {
-	width: 500px;
+.w-500 {
+	width: 490px;
+	padding: 0 5px;
 }
 
-.text-600 {
-	width: 600px;
+.w-600 {
+	width: 590px;
+	padding: 0 5px;
 }
 
-.text-650 {
-	width: 650px;
+.w-650 {
+	width: 640px;
+	padding: 0 5px;
 }
 
-.text-700 {
-	width: 700px;
+.w-700 {
+	width: 690px;
+	padding: 0 5px;
 }
 
-.text-5p {
+.w-5p {
 	width: 5%;
 	min-width: 40px;
 }
 
-.text-10p {
+.w-10p {
 	width: 8%;
 	padding: 0 5px;
 	min-width: 60px;
 }
 
-.text-15p {
+.w-15p {
 	width: 13%;
 	padding: 0 5px;
 	min-width: 100px;
 }
 
-.text-20p {
+.w-20p {
 	width: 18%;
 	padding: 0 5px;
 	min-width: 140px;
 }
 
-.text-25p {
+.w-25p {
 	width: 23%;
 	padding: 0 5px;
 	min-width: 180px;
 }
 
-.text-30p {
+.w-30p {
 	width: 28%;
 	padding: 0 5px;
 	min-width: 220px;
 }
 
-.text-35p {
+.w-35p {
 	width: 33%;
 	padding: 0 5px;
 	min-width: 260px;
 }
 
-.text-45p {
+.w-45p {
 	width: 43%;
 	padding: 0 5px;
 	min-width: 300px;
 }
 
-.text-50p {
+.w-50p {
 	width: 48%;
 	padding: 0 5px;
 	min-width: 340px;
 }
 
-.text-55p {
+.w-55p {
 	width: 53%;
 	padding: 0 5px;
 	min-width: 380px;
@@ -160,8 +182,8 @@
 }
 
 .ui-table {
-	width: 99%;
-	*width: 98%;
+	width: 1002px;
+	margin: 0 auto;
 }
 
 .ui-form {
@@ -287,7 +309,7 @@
 	cursor: pointer;
 }
 
-.table-source-line:HOVER {
+.table-source-line:hover {
 	background: #fff;
 }
 
@@ -385,11 +407,16 @@
 }
 
 .form-source-value .img-150 {
+	width: 200px;
 	height: 150px;
 }
 
 .form-source-value dd {
 	width: 100%;
+}
+
+.form-source-value dd input.error,.form-source-value dd textarea.error,.form-source-value dd img.error {
+	border-color: #e60000;
 }
 
 .form-source-value dd input.done {
