--- a/src/main/webapp/style/css/web.css
+++ b/src/main/webapp/style/css/web.css
@@ -50,7 +50,7 @@ a {
 	display: none;
 	background-color: #808080;
 	position: absolute;
-	filter: alpha(opacity = 50);
+	filter: alpha(opacity =   50);
 	-moz-opacity: 0.5;
 	opacity: 0.5;
 }
@@ -146,12 +146,8 @@ a {
 /* HOME */
 #header {
 	width: 100%;
-	height: 65px;
+	height: 50px;
 	overflow: hidden;
-}
-
-#header {
-	height: 44px;
 	border-top: 1px solid #808080;
 	border-bottom: 1px solid #808080;
 	background: #34495E;
@@ -162,16 +158,17 @@ a {
 
 #header-inner {
 	float: right;
-	height: 44px;
+	height: 50px;
+	display: none;
 }
 
 ul.nav {
-	height: 44px;
+	height: 50px;
 }
 
 #nav li.top-nav {
 	float: left;
-	height: 44px;
+	height: 50px;
 }
 
 #nav a.top-menu {
@@ -183,7 +180,7 @@ ul.nav {
 	height: 16px;
 	line-height: 16px;
 	text-align: center;
-	padding: 14px 25px;
+	padding: 17px 25px;
 	text-shadow: 0px 1px 1px #555;
 }
 
@@ -257,8 +254,8 @@ ul.nav-list a:hover {
 #menu-navi {
 	height: 30px;
 	line-height: 30px;
-	margin: 0 0 20px 0;
-	border-bottom: 5px solid #808080;
+	margin: 0 0 10px 0;
+	border-bottom: 4px solid #808080;
 }
 
 #navi-title {
@@ -266,7 +263,7 @@ ul.nav-list a:hover {
 	font-weight: bold;
 }
 
-.frame_class {
+.frame-body {
 	padding: 0;
 	margin: 0;
 	width: 100%;
@@ -274,23 +271,60 @@ ul.nav-list a:hover {
 	overflow: hidden;
 }
 
-#mainFrameContainer {
+#main-container {
 	position: absolute;
-	top: 110px;
+	top: 100px;
 	left: 0;
-	/*left: 15px;*/
 	bottom: 0;
 	right: 0;
 	overflow: hidden;
 	z-index: 4;
 }
 
-#mainFrame {
+#main-frame {
 	position: absolute;
 	_position: relative;
 	width: 100%;
 	_width: expression(document.body.offsetWidth - 15 + 'px');
 	height: 100%;
 	*height: expression(document.body.offsetHeight - 110 + 'px');
+	z-index: 5;
+}
+
+/* consume */
+#left-container {
+	width: 300px;
+	background: #808080;
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	border-left: 0 none;
+	height: auto;
+	_height: expression(document.body.offsetHeight + 'px');
+}
+
+#right-frame {
+	
+}
+
+#right-container {
+	position: absolute;
+	top: 0;
+	left: 300px;
+	bottom: 0;
+	right: 0;
+	overflow: hidden;
+	z-index: 4;
+}
+
+#right-frame {
+	position: absolute;
+	_position: relative;
+	width: 100%;
+	_width: expression(document.body.offsetWidth - 300 + 'px');
+	height: 100%;
+	*height: expression(document.body.offsetHeight + 'px');
 	z-index: 5;
 }
