--- a/src/main/webapp/style/css/ui.css
+++ b/src/main/webapp/style/css/ui.css
@@ -75,6 +75,26 @@ input:focus,textarea:focus,img:focus,select:focus {
 	padding: 0 5px;
 }
 
+.w-160 {
+	width: 150px;
+	padding: 0 5px;
+}
+
+.w-170 {
+	width: 160px;
+	padding: 0 5px;
+}
+
+.w-180 {
+	width: 170px;
+	padding: 0 5px;
+}
+
+.w-190 {
+	width: 180px;
+	padding: 0 5px;
+}
+
 .w-200 {
 	width: 190px;
 	padding: 0 5px;
@@ -174,6 +194,22 @@ input:focus,textarea:focus,img:focus,select:focus {
 	min-width: 380px;
 }
 
+.h-100 {
+	height: 100px;
+}
+
+.h-150 {
+	height: 150px;
+}
+
+.c-red {
+	color: red;
+}
+
+.c-dred {
+	color: maroon;
+}
+
 /* UI */
 .ui-dialog {
 	z-index: 1003;
@@ -231,25 +267,23 @@ input:focus,textarea:focus,img:focus,select:focus {
 	background: url("../image/ui-tip-title-bg.png") left top no-repeat;
 }
 
-.ui-operation,.ui-operation div {
+.ui-operation {
 	float: right;
 }
 
 .ui-btn {
+	color: #eee;
 	padding: 0 5px;
 	height: 24px;
 	line-height: 24px;
 	font-weight: bold;
 	margin: 3px 5px;
 	text-align: center;
-	cursor: pointer;
+	display: inline-block;
+	*display: inline;
 }
 
-.ui-btn a {
-	color: #eee;
-}
-
-.ui-btn a:hover {
+.ui-btn:hover {
 	color: #808080;
 }
 
