--- a/src/main/webapp/style/css/web.css
+++ b/src/main/webapp/style/css/web.css
@@ -289,7 +289,8 @@ ul.nav-list a:hover {
 /* consume */
 #left-container {
 	width: 300px;
-	background: #333;
+	background: #33373b;
+	/* #1c82b4 */
 	position: absolute;
 	top: 0;
 	left: 0;
@@ -377,7 +378,7 @@ ul.nav-list a:hover {
 #mem-info dd {
 	margin: 0;
 	padding: 3px 0;
-	font-weight: bold;
 	height: 14px;
+	color: #beccd9;
 	line-height: 14px;
 }
